--- a/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
+++ b/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
@@ -109,20 +109,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ba3-hA-h4k">
-                                <rect key="frame" x="149.66666666666666" y="415.66666666666669" width="93.666666666666657" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5aq-Ea-Mda">
+                                <rect key="frame" x="8" y="67" width="377" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="SkD-gL-WrD"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="iIm-qn-uHe">
+                                <rect key="frame" x="8" y="325" width="377" height="493"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="RKN-1l-Je0">
+                                <rect key="frame" x="186.66666666666666" y="182" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="DWK-aD-TmJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Ba3-hA-h4k" firstAttribute="centerY" secondItem="fpR-TO-CRj" secondAttribute="centerY" id="CV4-Dt-afO"/>
-                            <constraint firstItem="Ba3-hA-h4k" firstAttribute="centerX" secondItem="fpR-TO-CRj" secondAttribute="centerX" id="oaV-zN-0xX"/>
+                            <constraint firstItem="RKN-1l-Je0" firstAttribute="centerX" secondItem="5aq-Ea-Mda" secondAttribute="centerX" id="4uk-d4-bf3"/>
+                            <constraint firstItem="iIm-qn-uHe" firstAttribute="trailing" secondItem="5aq-Ea-Mda" secondAttribute="trailing" id="Cr6-jR-Ba8"/>
+                            <constraint firstItem="5aq-Ea-Mda" firstAttribute="leading" secondItem="DWK-aD-TmJ" secondAttribute="leading" constant="8" id="KTK-a0-6lL"/>
+                            <constraint firstItem="5aq-Ea-Mda" firstAttribute="top" secondItem="DWK-aD-TmJ" secondAttribute="top" constant="8" id="QH6-7K-Jof"/>
+                            <constraint firstItem="RKN-1l-Je0" firstAttribute="centerY" secondItem="5aq-Ea-Mda" secondAttribute="centerY" id="Xcg-l7-Vvr"/>
+                            <constraint firstItem="DWK-aD-TmJ" firstAttribute="trailing" secondItem="5aq-Ea-Mda" secondAttribute="trailing" constant="8" id="bHb-KI-i05"/>
+                            <constraint firstItem="DWK-aD-TmJ" firstAttribute="bottom" secondItem="iIm-qn-uHe" secondAttribute="bottom" id="cpv-y4-Pco"/>
+                            <constraint firstItem="iIm-qn-uHe" firstAttribute="top" secondItem="5aq-Ea-Mda" secondAttribute="bottom" constant="8" id="dwu-dX-TLJ"/>
+                            <constraint firstItem="iIm-qn-uHe" firstAttribute="leading" secondItem="5aq-Ea-Mda" secondAttribute="leading" id="vks-vv-FVz"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageViewMovie" destination="5aq-Ea-Mda" id="2ME-h4-5l4"/>
+                        <outlet property="indicatorView" destination="RKN-1l-Je0" id="K7K-zA-136"/>
+                        <outlet property="textViewMovieDetails" destination="iIm-qn-uHe" id="Tad-HL-TBy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jCo-tq-3Ry" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -148,6 +171,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
