--- a/Lodos Movies/App/Components/Storyboards/Base.lproj/Main.storyboard
+++ b/Lodos Movies/App/Components/Storyboards/Base.lproj/Main.storyboard
@@ -50,56 +50,47 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="NLc-Ox-bHE">
                                 <rect key="frame" x="186.66666666666666" y="416" width="20" height="20"/>
                             </activityIndicatorView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="b5R-aL-6O9">
-                                <rect key="frame" x="8" y="59" width="377" height="759"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="qM5-CL-hgG">
-                                        <rect key="frame" x="0.0" y="50" width="377" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qM5-CL-hgG" id="0tq-n1-ZIj">
-                                            <rect key="frame" x="0.0" y="0.0" width="377" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Tco-PJ-alz">
-                                        <rect key="frame" x="0.0" y="94" width="377" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tco-PJ-alz" id="eMH-fI-Edt">
-                                            <rect key="frame" x="0.0" y="0.0" width="377" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Tnt-Db-Ooz">
-                                        <rect key="frame" x="0.0" y="138" width="377" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tnt-Db-Ooz" id="SRu-zD-7qr">
-                                            <rect key="frame" x="0.0" y="0.0" width="377" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="BcJ-Pq-JoP">
+                                <rect key="frame" x="0.0" y="59" width="393" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="ypJ-Oa-qSa" id="KRt-pb-Llz"/>
+                                </connections>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="icl-rx-pz8">
+                                <rect key="frame" x="0.0" y="115" width="393" height="703"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sRf-25-VFV">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ode-iD-ihV"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="NLc-Ox-bHE" firstAttribute="centerY" secondItem="BtU-z0-4PE" secondAttribute="centerY" id="5KZ-l5-RXS"/>
-                            <constraint firstItem="Ode-iD-ihV" firstAttribute="bottom" secondItem="b5R-aL-6O9" secondAttribute="bottom" id="8Ot-9e-aPt"/>
+                            <constraint firstItem="icl-rx-pz8" firstAttribute="top" secondItem="BcJ-Pq-JoP" secondAttribute="bottom" id="Ck3-G4-hfU"/>
                             <constraint firstItem="NLc-Ox-bHE" firstAttribute="centerX" secondItem="BtU-z0-4PE" secondAttribute="centerX" id="JMe-jA-WU6"/>
-                            <constraint firstItem="b5R-aL-6O9" firstAttribute="top" secondItem="Ode-iD-ihV" secondAttribute="top" id="Nen-eA-DsU"/>
-                            <constraint firstItem="b5R-aL-6O9" firstAttribute="leading" secondItem="Ode-iD-ihV" secondAttribute="leading" constant="8" id="jfZ-DO-bMy"/>
-                            <constraint firstItem="Ode-iD-ihV" firstAttribute="trailing" secondItem="b5R-aL-6O9" secondAttribute="trailing" constant="8" id="k7B-bh-IaD"/>
+                            <constraint firstItem="BcJ-Pq-JoP" firstAttribute="trailing" secondItem="Ode-iD-ihV" secondAttribute="trailing" id="KIT-vq-Hoj"/>
+                            <constraint firstItem="BcJ-Pq-JoP" firstAttribute="top" secondItem="Ode-iD-ihV" secondAttribute="top" id="Pvs-tf-WVL"/>
+                            <constraint firstItem="Ode-iD-ihV" firstAttribute="trailing" secondItem="icl-rx-pz8" secondAttribute="trailing" id="TAb-TB-Bdf"/>
+                            <constraint firstItem="BcJ-Pq-JoP" firstAttribute="leading" secondItem="Ode-iD-ihV" secondAttribute="leading" id="xiW-KX-Lk2"/>
+                            <constraint firstItem="icl-rx-pz8" firstAttribute="leading" secondItem="Ode-iD-ihV" secondAttribute="leading" id="ySK-GD-1ai"/>
+                            <constraint firstItem="Ode-iD-ihV" firstAttribute="bottom" secondItem="icl-rx-pz8" secondAttribute="bottom" id="zQT-BB-V5R"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionViewMovies" destination="icl-rx-pz8" id="H0B-XU-vsc"/>
                         <outlet property="indicator" destination="NLc-Ox-bHE" id="rHS-RO-iCC"/>
-                        <outlet property="tableViewMovies" destination="b5R-aL-6O9" id="gbm-Gt-gTR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UAH-Ql-s4a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1450" y="-27"/>
+            <point key="canvasLocation" x="1449.6183206106869" y="-27.464788732394368"/>
         </scene>
         <!--Movie Detail View Controller-->
         <scene sceneID="FUB-MH-Kad">
